// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Secp521r1 mapper successfully resolves the document from did 1`] = `
Object {
  "assertionMethod": Array [
    "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv#z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
  ],
  "authentication": Array [
    "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv#z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
  ],
  "capabilityDelegation": Array [
    "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv#z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
  ],
  "capabilityInvocation": Array [
    "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv#z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
  ],
  "id": "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
  "verificationMethod": Array [
    Object {
      "controller": "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
      "id": "did:key:z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv#z2J9gaYYsyxoBFetnNbSfcYnnq8TxqCMdniwCMHhANy3VjTCdEskGw5Yy9XPGFzNsV6DavGDHuaAsXDnFDiod48seQYx1hpv",
      "publicKeyJwk": Object {
        "crv": "P-521",
        "kty": "EC",
        "x": "uFWLDeZa5bsUPkhFyAXaFkvYCLxptqSH70opasno41oxvBusv6rNso81qF1ABLfAL8cSaT2VrW9viDU-uTlU2rYs",
        "y": "uAZVSEJEUy_YsZMAR0tuvahew24OzdZXjuZE_VOtSah5E8cSDQYvRXlLlmNeDz4pxac_CQUpsHqovdiNtyih8kyj4",
      },
      "type": "JsonWebKey2020",
    },
  ],
}
`;

exports[`Secp521r1 mapper successfully resolves the document from did 2`] = `
Object {
  "assertionMethod": Array [
    "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f#z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
  ],
  "authentication": Array [
    "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f#z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
  ],
  "capabilityDelegation": Array [
    "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f#z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
  ],
  "capabilityInvocation": Array [
    "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f#z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
  ],
  "id": "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
  "verificationMethod": Array [
    Object {
      "controller": "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
      "id": "did:key:z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f#z2J9gcGdb2nEyMDmzQYv2QZQcM1vXktvy1Pw4MduSWxGabLZ9XESSWLQgbuPhwnXN7zP7HpTzWqrMTzaY5zWe6hpzJ2jnw4f",
      "publicKeyJwk": Object {
        "crv": "P-521",
        "kty": "EC",
        "x": "uAQgyFy6EwH3_u_KXPw8aTXTY7WSVytmbuJeFpq4U6LipxtSmBJe_jjRzms9qubnwm_fGoHMQlvQ1vzS2YLusR2V0",
        "y": "uAercFv5vRCPAUwv1CoVBJIIzmDYF0MOhqtOZFkYUGa2NsTHxLSIkLArACuHxIdGvpC2ghuaHX0r-5pbIgNK3fq7N",
      },
      "type": "JsonWebKey2020",
    },
  ],
}
`;

exports[`Secp521r1 mapper successfully resolves the document from did 3`] = `
Object {
  "assertionMethod": Array [
    "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7#z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
  ],
  "authentication": Array [
    "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7#z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
  ],
  "capabilityDelegation": Array [
    "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7#z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
  ],
  "capabilityInvocation": Array [
    "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7#z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
  ],
  "id": "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
  "verificationMethod": Array [
    Object {
      "controller": "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
      "id": "did:key:z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7#z2J9gaYxrKVpdoG9A4gRnmpnRCcxU6agDtFVVBVdn1JedouoZN7SzcyREXXzWgt3gGiwpoHq7K68X4m32D8HgzG8wv3sY5j7",
      "publicKeyJwk": Object {
        "crv": "P-521",
        "kty": "EC",
        "x": "uASUHPMyichQ0QbHZ9ofNx_l4y7luncn5feKLo3OpJ2nSbZoC7mffolj5uy7s6KSKXFmnNWxGJ42IOrjZ47qqwqyS",
        "y": "uAYc35Zyx59ddvMZUTQEXLqgvGCzkqo6EkXjNCLb8luoYuIyT9G6aYqiciNhFC4MqhXnvbMTGLRjby_gF54_dueyI",
      },
      "type": "JsonWebKey2020",
    },
  ],
}
`;
